--- a/frontend/components/header.html
+++ b/frontend/components/header.html
@@ -1,5 +1,5 @@
 <div class="logo-section">
-  <a href="index.html"><img src="public/Logo votacion.png" alt="FESC Logo" class="vote-logo"></a>
+  <a href="index.html"><img src="public/Logo votacion.svg" alt="FESC Logo" class="vote-logo"></a>
 </div>
 <div class="center">
   <h1 class="titulo-evento">Tiempo faltante:</h1>
