Estilos de validacion ajustados

--- a/backend/votaciones/templates/components/header.html
+++ b/backend/votaciones/templates/components/header.html
@@ -1,7 +1,12 @@
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'css/header.css' %}">
+<link rel="stylesheet" href="{% static 'css/css-responsive.css' %}">
+
 <div class="logo-section">
-  <a href="https://fescvotaciones.com"><img src="../public/Logo votacion.svg" alt="FESC Logo" class="vote-logo"></a>
+  <a href="https://fescvotaciones.com"><img src="{% static 'public/Logo votacion.svg' %}" alt="FESC Logo" class="vote-logo"></a>
 </div>
-<div class="center">
+<!-- <div class="center">
   <h1 class="titulo-evento">Tiempo faltante:</h1>
   <div class="contador">
     <div class="countdown">
@@ -11,5 +16,5 @@
       <div class="time-box"><div id="seconds" class="flip-card">00</div></div>
     </div>
   </div>
-</div>
-<img src="../public/Logo-FESC+30.png" alt="FESC Logo" class="fesc-logo">
+</div> -->
+<img src="{% static 'public/Logo-FESC+30.png' %}" alt="FESC Logo" class="fesc-logo">
