--- a/frontend/views/votacion_layout.html
+++ b/frontend/views/votacion_layout.html
@@ -378,7 +378,7 @@
             <div class="plancha-card">
                 <div class="plancha-header">
                     <span class="plancha-chip">Plancha</span>
-                    <span class="plancha-num">01</span>
+                    <span class="plancha-num">X</span>
                 </div>
                 <div class="imagen-tarjeton">
                     <img src="../public/voto-blanco.png" alt="FESC">
@@ -389,7 +389,7 @@
             <div class="plancha-card">
                 <div class="plancha-header">
                     <span class="plancha-chip">Plancha</span>
-                    <span class="plancha-num">02</span>
+                    <span class="plancha-num">X</span>
                 </div>
                 <div class="imagen-tarjeton">
                     <img src="../public/voto-blanco.png" alt="FESC">
@@ -400,7 +400,7 @@
             <div class="plancha-card">
                 <div class="plancha-header">
                     <span class="plancha-chip">Plancha</span>
-                    <span class="plancha-num">03</span>
+                    <span class="plancha-num">X</span>
                 </div>
                 <div class="imagen-tarjeton">
                     <img src="../public/voto-blanco.png" alt="FESC">
@@ -411,7 +411,7 @@
             <div class="plancha-card">
                 <div class="plancha-header">
                     <span class="plancha-chip">Plancha</span>
-                    <span class="plancha-num">04</span>
+                    <span class="plancha-num">X</span>
                 </div>
                 <div class="imagen-tarjeton">
                     <img src="../public/voto-blanco.png" alt="FESC">
